--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <button id="logout">🚪 Logout</button>
         <button id="help-btn">❓ Help</button>
       </div>
-      <h1><span>✅</span> Siah To Do</h1>
+      <h1><span>✅</span> Test to Do</h1>
     </div>
   </div>
 
